# sea-orm-mismatched-enum-types

./: Cargo.toml
demo/: Cargo.toml
demo/src/: main.rs
entity/src/: file.rs  lib.rs  prelude.rs  sea_orm_active_enums.rs
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
