[package]
name = "demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
migration = { path = "../migration" }
entity = { path = "../entity" }
tokio = { version = "1.25.0", features = ["full"] }
sea-orm = { version = "^0", features = [
  "sqlx-postgres",
  "runtime-tokio-native-tls",
  "macros",
] }
[dependencies.uuid]
version = "1.3.0"
features = ["v4", "fast-rng", "macro-diagnostics"]
